# WardRound-Env

./: .gitignore  BLOG.md  Dockerfile  README.md  ROADMAP.md  __init__.py  advanced_rl_env.py  adversarial_audit.py  agents.py  audit_log.txt  audit_log_brutal.txt  audit_log_fixed.txt  audit_log_robust.txt  balanced_rl_env.py  client.py  eval.py  inference.py  inference_out.txt  inference_out_utf8.txt  models.py  openenv.yaml  pyproject.toml  real_training.py  red_team_audit.py  red_team_final.txt  requirements.txt  strict_rl_env.py  test_edge_cases.py  test_error.txt  test_inference.txt  test_out.txt  test_reasoning.py  training.py
.github/workflows/: sync-to-hub.yml
docs/: mini-blog.md  starter.md
scenarios/: easy.json  hard.json  loader.py  medium.json
server/: __init__.py  app.py  environment.py
training_output/: behavior_comparison.txt  training_log.csv
wardround_env/: __init__.py  agents.py  grader.py  reward.py
wardround_env/scenarios/: __init__.py  easy.json  hard.json  loader.py  medium.json
